--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
-    <title>wulonghui.GitHub.io by wulonghui</title>
+    <title>Wulonghui&#39;s Blog by wulonghui</title>
   </head>
 
   <body>
@@ -18,7 +18,7 @@
       <div class="inner">
 
         <header>
-          <h1>wulonghui.GitHub.io</h1>
+          <h1>Wulonghui&#39;s Blog</h1>
           <h2></h2>
         </header>
 
@@ -30,7 +30,7 @@
 
         <section id="main_content">
           <h1>
-<a id="wulonghuis-blog" class="anchor" href="#wulonghuis-blog" aria-hidden="true"><span class="octicon octicon-link"></span></a>wulonghui's blog</h1>
+<a id="building" class="anchor" href="#building" aria-hidden="true"><span class="octicon octicon-link"></span></a>Building</h1>
         </section>
 
         <footer>
